--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="recipes"></div>
         <div class="reservation"></div>
       </main>
-      <footer>hello</footer>
+      <footer></footer>
     </div>
   </body>
 </html>
