--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
   </head>
   <body>
     <div class="page">
-      <header></header>
-      <main>
-        <div class="recipes"></div>
-        <div class="reservation"></div>
+      <header class="header"></header>
+      <main class="content">
+        <section class="recipes"></section>
+        <section class="reservation"></section>
       </main>
-      <footer></footer>
+      <footer class="footer"></footer>
     </div>
   </body>
 </html>
