--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Loja de café" />
     <meta name="author" content="Werik Jacob" />
     <meta name="keywords" content="café, loja, receitas, reserva" />
-    <title>Café</title>
+    <title>Coffe Shop</title>
     <link rel="stylesheet" href="./vendor/normalize.css" />
     <link rel="stylesheet" href="./pages/index.css" />
     <link rel="shortcut icon" href="favicon.ico" />
@@ -19,10 +19,104 @@
   </head>
   <body>
     <div class="page">
-      <header class="header"></header>
+      <header class="header">
+        <nav class="nav">
+          <img
+            src="./images/logo_coffeeshop_dark.svg"
+            alt="Logotipo cooffeshop Triple Peaks"
+            class="nav__logo"
+          />
+
+          <ul class="nav__links">
+            <li>
+              <a class="nav__link" href="#recipes">Receitas</a>
+            </li>
+            <li>
+              <a class="nav__link" href="#">Reservar uma mesa</a>
+            </li>
+            <li>
+              <a class="nav__link" href="#">Contatos</a>
+            </li>
+          </ul>
+        </nav>
+        <h1 class="header__title">
+          <span
+            style="font-style: italic; font-family: Noto-serif; color: #2f80ed"
+            >Café especial </span
+          ><span style="font-family: Inter; letter-spacing: -1px"
+            >na biblioteca Triple Peaks</span
+          >
+        </h1>
+        <p class="header__description">
+          Esta é nossa zona de estudo! Temos aquele cafezinho para energizar
+          você e vibrações aconchegantes para soltar a criatividade.
+        </p>
+
+        <img
+          src="./images/inside_coffee_shop.png"
+          alt="Ilustração 'Dentro da biblioteca'"
+          class="header__image"
+        />
+
+        <div class="header__footer">
+          <div class="header__hours">
+            <h2 class="header__footer-hours">Horários:</h2>
+            <ul class="header__list">
+              <li class="header__list-item">Segunda a sexta (10:00 - 19:00)</li>
+              <li class="header__list-item">
+                Sábado a domingo (11:00 - 18:00)
+              </li>
+            </ul>
+          </div>
+
+          <div class="header__address">
+            <p class="header__address_Title">
+              200 Success Avenue, a cidade de Triple Peaks
+            </p>
+          </div>
+        </div>
+      </header>
+
       <main class="content">
-        <section class="recipes"></section>
-        <section class="reservation"></section>
+        <section class="recipes" id="recipes">
+          <h2 class="recipes__title">Receitas</h2>
+          <p class="recipes__subtitle">
+            Confira algumas receitas que coletamos para seu lanchinho caseiro:
+          </p>
+          <ul class="recipes__list">
+            <li class="recipes__video">
+              <div class="recipes__video-item">
+                <iframe
+                  src="https://www.youtube.com/embed/j6VlT_jUVPc?si=AoZ4sToyhWKXAZye"
+                  title="YouTube video player"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                  referrerpolicy="strict-origin-when-cross-origin"
+                  allowfullscreen
+                ></iframe>
+                <div class="recipes__caption">
+                  <p class="recipes__video-text">Receita Aeropress</p>
+                  <p class="recipes__video-text">~5 min</p>
+                </div>
+              </div>
+            </li>
+
+            <li class="recipes__video">
+              <div class="recipes__video-item">
+                <iframe
+                  src="https://www.youtube.com/embed/st571DYYTR8?si=n-yhp_XflIVu80Nh"
+                  title="YouTube video player"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                  referrerpolicy="strict-origin-when-cross-origin"
+                  allowfullscreen
+                ></iframe>
+                <div class="recipes__caption">
+                  <p class="recipes__video-text">Receita de Prensa Francesa</p>
+                  <p class="recipes__video-text">~15 min</p>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </section>
       </main>
       <footer class="footer"></footer>
     </div>
