--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           </div>
 
           <div class="header__address">
-            <p class="header__address_Title">
+            <p class="header__address-title">
               200 Success Avenue, a cidade de Triple Peaks
             </p>
           </div>
