--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
             </li>
           </ul>
         </section>
+        <section class="reservation"></section>
       </main>
       <footer class="footer"></footer>
     </div>
