--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
               <a class="nav__link" href="#recipes">Receitas</a>
             </li>
             <li>
-              <a class="nav__link" href="#">Reservar uma mesa</a>
+              <a class="nav__link" href="#reservation">Reservar uma mesa</a>
             </li>
             <li>
               <a class="nav__link" href="#">Contatos</a>
@@ -117,7 +117,7 @@
             </li>
           </ul>
         </section>
-        <section class="reservation"></section>
+        <section class="reservation" id="reservation"></section>
       </main>
       <footer class="footer"></footer>
     </div>
