--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
             <li class="recipes__video">
               <div class="recipes__video-item">
                 <iframe
+                  class="recipes__iframe"
                   src="https://www.youtube.com/embed/j6VlT_jUVPc?si=AoZ4sToyhWKXAZye"
                   title="YouTube video player"
                   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -103,6 +104,7 @@
             <li class="recipes__video">
               <div class="recipes__video-item">
                 <iframe
+                  class="recipes__iframe"
                   src="https://www.youtube.com/embed/st571DYYTR8?si=n-yhp_XflIVu80Nh"
                   title="YouTube video player"
                   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
