projeto em desenvolvimento

--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
           <p class="recipes__subtitle">
             Confira algumas receitas que coletamos para seu lanchinho caseiro:
           </p>
-          <ul class="recipes__list">
-            <li class="recipes__video">
+          <ul class="recipes__video">
+            <li class="recipes__video-list">
               <div class="recipes__video-item">
                 <iframe
                   class="recipes__iframe"
