projeto em desenvolvimento

--- a/index.html
+++ b/index.html
@@ -60,17 +60,15 @@
 
         <div class="header__footer">
           <div class="header__hours">
-            <h2 class="header__footer-hours">Horários:</h2>
-            <ul class="header__list">
-              <li class="header__list-item">Segunda a sexta (10:00 - 19:00)</li>
-              <li class="header__list-item">
-                Sábado a domingo (11:00 - 18:00)
-              </li>
-            </ul>
+            <p class="header__paragraph">Horários:</p>
+            <div class="header__list">
+              <p class="header__paragraph">Segunda a sexta (10:00 - 19:00)</p>
+              <p class="header__paragraph">Sábado a domingo (11:00 - 18:00)</p>
+            </div>
           </div>
 
           <div class="header__address">
-            <p class="header__address-title">
+            <p class="header__paragraph">
               200 Success Avenue, a cidade de Triple Peaks
             </p>
           </div>
@@ -83,7 +81,7 @@
           <p class="recipes__subtitle">
             Confira algumas receitas que coletamos para seu lanchinho caseiro:
           </p>
-          <ul class="recipes__video">
+          <ul class="recipes__videos">
             <li class="recipes__video-list">
               <div class="recipes__video-item">
                 <iframe
@@ -101,7 +99,7 @@
               </div>
             </li>
 
-            <li class="recipes__video">
+            <li class="recipes__video-list">
               <div class="recipes__video-item">
                 <iframe
                   class="recipes__iframe"
