--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
               <a class="nav__link" href="#reservation">Reservar uma mesa</a>
             </li>
             <li>
-              <a class="nav__link" href="#">Contatos</a>
+              <a class="nav__link" href="#footer">Contatos</a>
             </li>
           </ul>
         </nav>
@@ -117,9 +117,76 @@
             </li>
           </ul>
         </section>
-        <section class="reservation" id="reservation"></section>
+
+        <section class="reservation" id="reservation">
+          <h2 class="reservation__title">Reservar uma mesa</h2>
+          <form class="reservation__form" action="#" method="post">
+            <fieldset class="reservation__fieldset">
+              <label for="name" class="reservation__label">Nome *</label>
+              <input
+                type="text"
+                id="name"
+                name="name"
+                class="reservation__input"
+                placeholder="Nome"
+                required
+              />
+
+              <label for="convidados" class="reservation__label"
+                >Números de convidados *</label
+              >
+              <input
+                type="number"
+                id="convidados"
+                name="convidados"
+                class="reservation__input"
+                min="1"
+                max="8"
+                placeholder="1-8"
+                required
+              />
+
+              <label for="date" class="reservation__label">Data e hora *</label>
+              <input
+                type="datetime-local"
+                id="date"
+                name="date"
+                class="reservation__input"
+                placeholder="AAAA-MM-DD HH:MM"
+                required
+              />
+
+              <label for="email" class="reservation__label">Seu e-mail *</label>
+              <input
+                type="email"
+                id="email"
+                name="email"
+                class="reservation__input"
+                placeholder="email@email.com"
+                required
+              />
+
+              <button type="submit" class="reservation__button">
+                Reservar mesa
+              </button>
+
+              <div class="reservation__checkbox">
+                <input
+                  type="checkbox"
+                  id="terms"
+                  name="terms"
+                  class="reservation__checkbox-container"
+                  required
+                />
+                <label for="terms" class="reservation__note"
+                  >Eu concordo com os termos de uso
+                </label>
+              </div>
+            </fieldset>
+          </form>
+        </section>
       </main>
-      <footer class="footer"></footer>
+      <footer class="footer" id="footer"></footer>
     </div>
   </body>
 </html>
