Projeto em desenvolvimento

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
         <section class="reservation" id="reservation">
           <h2 class="reservation__title">Reservar uma mesa</h2>
-          <form class="reservation__form" action="#" method="post">
+          <form class="reservation__form form" action="#" method="post">
             <fieldset class="reservation__fieldset">
               <label for="name" class="reservation__label">Nome *</label>
               <input
@@ -152,7 +152,6 @@
                 id="date"
                 name="date"
                 class="reservation__input"
-                placeholder="AAAA-MM-DD HH:MM"
                 required
               />
 
