projeto em desenvolvimento

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <meta name="author" content="Werik Jacob" />
     <meta name="keywords" content="café, loja, receitas, reserva" />
     <title>Coffe Shop</title>
-    <link rel="stylesheet" href="./vendor/normalize.css" />
     <link rel="stylesheet" href="./pages/index.css" />
     <link rel="shortcut icon" href="favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -185,7 +184,42 @@
           </form>
         </section>
       </main>
-      <footer class="footer" id="footer"></footer>
+      <footer class="footer" id="footer">
+        <div class="footer__columns">
+          <div class="footer__circle"></div>
+
+          <img
+            src="./images/logo_coffeeshop_light.svg"
+            alt="Logotipo da Biblioteca Triple Peaks"
+            class="footer__logo"
+          />
+
+          <div class="footer__column footer__column_content_social">
+            <h4 class="footer__column-heading">Mídia social</h4>
+            <ul class="footer__list">
+              <li class="footer__list-item">
+                <a class="footer__social-link" href="#">
+                  <img
+                    src="./images/facebook_white.svg"
+                    alt="Facebook icon"
+                    class="footer__social-icon"
+                  />Facebook
+                </a>
+              </li>
+              <li class="footer__list-item">
+                <a class="footer__social-link" href="#">
+                  <img
+                    src="./images/instagram_white.svg"
+                    alt="Instagram icon"
+                    class="footer__social-icon"
+                  />Instagram
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <p class="footer__copyright">&copy; 2025 Werik Jacob</p>
+      </footer>
     </div>
   </body>
 </html>
