Projeto em desenvolvimento

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
         </section>
       </main>
       <footer class="footer" id="footer">
-        <div class="footer__columns">
+        <div class="footer__content">
           <div class="footer__circle"></div>
 
           <img
@@ -194,8 +194,8 @@
             class="footer__logo"
           />
 
-          <div class="footer__column footer__column_content_social">
-            <h4 class="footer__column-heading">Mídia social</h4>
+          <div class="footer__social">
+            <h4 class="footer__social-heading">Mídia social</h4>
             <ul class="footer__list">
               <li class="footer__list-item">
                 <a class="footer__social-link" href="#">
